--- a/page/API/pages/all-trade-list-detail/all-trade-list-detail.wxss
+++ b/page/API/pages/all-trade-list-detail/all-trade-list-detail.wxss
@@ -95,6 +95,7 @@
     border-radius: 10rpx;
     font-size: 24rpx;
     text-align: center;
+    color: #fff;
 }
 .list-state.one {
      background-color: #009944;
