--- a/page/API/index.wxml
+++ b/page/API/index.wxml
@@ -64,8 +64,6 @@
             <text class="register-txt little-sml" style="color: #FD6070">  管理子账户</text>
         </view>
     </view>
-    <!--<upload id='upload' files='{{files}}' maxFileCount='{{maxFileCount}}' isCanAddFile='{{files.length>=maxFileCount?false:true}}'></upload>-->
-    <!--<button bindtap='showFiles'>获取文件</button>-->
 </view>
 
 
@@ -83,7 +81,29 @@
             <image class='input-icon' src='/image/person/codeicon.png' style="width: 30rpx;height: 38rpx;"></image>
             <view class='input-right'style="width:92%;">
                 <input type='number' maxlength='6' class='input input1' bindinput='setCode' name="code" value='' placeholder='请输入验证码'></input>
-                <button class='input-button' bindtap='getCode' disabled='{{!canGetCode}}'>{{codeButton}}</button>
+
+                <form bindsubmit="formSubmit" report-submit="{{true}}" style="width: 160rpx;">
+                    <button formType="submit" class='btn'>
+                        <form bindsubmit="formSubmit" report-submit="{{true}}">
+                            <button formType="submit" class='btn'>
+                                <form bindsubmit="formSubmit" report-submit="{{true}}">
+                                    <button formType="submit" class='btn'>
+                                        <form bindsubmit="formSubmit" report-submit="{{true}}">
+                                            <button formType="submit" class='btn'>
+                                                <form bindsubmit="formSubmit" report-submit="{{true}}">
+                                                    <button formType="submit" class='btn'>
+                                                        <button class='input-button' formType="submit" bindtap='getCode' disabled='{{!canGetCode}}'>{{codeButton}}</button>
+                                                    </button>
+                                                </form>
+                                            </button>
+                                        </form>
+                                    </button>
+                                </form>
+                            </button>
+                        </form>
+                    </button>
+                </form>
+
             </view>
         </view>
         <view class='input-border' style="width: 90%">
@@ -94,9 +114,10 @@
             <image class='input-icon' src='/image/person/idcardicon.png' style="width: 41rpx;height: 30rpx;"></image>
             <input style="width:92%;" type='text' class='input' value='' name="idNumber" placeholder='请输入身份证号'></input>
         </view>
-        <button class='modal-1-button input-button1' style="width:674rpx;border-radius:47rpx;background-image: url();background-color:#FF4C5E;margin-bottom: 0;" disabled='{{!canBindPhone}}' form-type='submit'>注册</button>
+        <button class='modal-1-button input-button1' style="width:674rpx;border-radius:47rpx;background-image: url();background-color:#FF4C5E;margin: 0 auto;margin-bottom: 0;margin-top: 40rpx" disabled='{{!canBindPhone}}' form-type='submit'>注册</button>
     </form>
 </view>
+
 
 <view class='auth-view' hidden='{{!showCompanyRegister}}' style="background-color:#fff;">
     <form bindsubmit='companyRegister' report-submit='true' style="width: 95%;margin: 0 auto;">
@@ -112,7 +133,29 @@
             <image class='input-icon' src='/image/person/codeicon.png' style="width: 30rpx;height: 38rpx;"></image>
             <view class='input-right' style="width:92%;">
                 <input type='number' maxlength='6' class='input input1' bindinput='setCode' name="code" value='' placeholder='请输入验证码'></input>
-                <button class='input-button' bindtap='getCode' disabled='{{!canGetCode}}'>{{codeButton}}</button>
+
+                <form bindsubmit="formSubmit" report-submit="{{true}}" style="width: 160rpx;">
+                    <button formType="submit" class='btn'>
+                        <form bindsubmit="formSubmit" report-submit="{{true}}">
+                            <button formType="submit" class='btn'>
+                                <form bindsubmit="formSubmit" report-submit="{{true}}">
+                                    <button formType="submit" class='btn'>
+                                        <form bindsubmit="formSubmit" report-submit="{{true}}">
+                                            <button formType="submit" class='btn'>
+                                                <form bindsubmit="formSubmit" report-submit="{{true}}">
+                                                    <button formType="submit" class='btn'>
+                                                        <button class='input-button' formType="submit" bindtap='getCode' disabled='{{!canGetCode}}'>{{codeButton}}</button>
+                                                    </button>
+                                                </form>
+                                            </button>
+                                        </form>
+                                    </button>
+                                </form>
+                            </button>
+                        </form>
+                    </button>
+                </form>
+
             </view>
         </view>
         <view class='input-border' style="width: 90%">
@@ -120,7 +163,7 @@
             <input style="width:92%;" type='text' class='input' value='' name="company" placeholder='请输入公司名称'></input>
         </view>
         <upload id='upload' files='{{files}}' maxFileCount='{{maxFileCount}}' isCanAddFile='{{files.length>=maxFileCount?false:true}}' uploadText="上传或拍摄您的营业执照副本" bigWidth="97%" bigHeight="240rpx"></upload>
-        <button class='modal-1-button input-button1' style="width:674rpx;border-radius:47rpx;background-image: url();background-color:#FF4C5E;margin-bottom: 0;" disabled='{{!canBindPhone}}' form-type='submit'>注册</button>
+        <button class='modal-1-button input-button1' style="width:674rpx;border-radius:47rpx;background-image: url();background-color:#FF4C5E;margin: 0 auto;margin-bottom: 0;margin-top: 40rpx" disabled='{{!canBindPhone}}' form-type='submit'>注册</button>
         <view style="margin-top: 32rpx;text-align: center;font-size: 24rpx;color: #c5c5c5;">信息一经提交将无法修改，请谨慎填写</view>
     </form>
 </view>
@@ -159,4 +202,12 @@
         <text class='auth-text'></text>
     </view>
     <button class='auth-button' bindtap='retry'>重试</button>
+</view>
+
+<view class='auth-view' hidden='{{!showSonPersonStop}}'>
+    <view class='auth-top-border'>
+        <text class='auth-text'>您的账户已被停用</text>
+        <text class='auth-text'></text>
+    </view>
+    <!--<button class='auth-button' bindtap='retry'>重试</button>-->
 </view>
