--- a/page/API/pages/all-trade-list-detail-borrow/all-trade-list-detail-borrow.wxml
+++ b/page/API/pages/all-trade-list-detail-borrow/all-trade-list-detail-borrow.wxml
@@ -29,7 +29,7 @@
                 <!--<image class="list-img" src="../../../../image/wechat.png"></image>-->
 
                 <view class="list-left">
-                    <checkbox value="{{index}}" checked="{{item.selected}}" wx:if="{{item.state==='借出中'&&isSelect}}" />
+                    <checkbox value="{{index}}" checked="{{item.selected}}" wx:if="{{(item.state==='借出中'||item.state==='逾期')&&isSelect}}" />
                     <image class="list-img" src="{{item.imageUrl}}"></image>
                     <view class="{{item.state==='借出中'?'list-state':item.state==='已卖'?'list-state one':item.state==='已还'?'list-state two':item.state==='逾期'?'list-state three':'list-state'}}">{{item.state==='借出中'?'':item.state}}</view>
                 </view>
