--- a/page/API/pages/home/home.wxss
+++ b/page/API/pages/home/home.wxss
@@ -1,4 +1,14 @@
 @import "/page/common/css/modal.wxss";
+form button{
+    padding: 0;
+    text-align: left;
+    height: 238rpx;
+    background-color: #fff;
+}
+form button::after{
+    content: '';
+    display: none;
+}
 .all-screen {
     width: 100%;
     height: 100%;
@@ -94,6 +104,7 @@
 }
 .sum-number {
     font-size: 100rpx;
+    line-height: 1;
 }
 .footer-box {
     width: 100%;
